[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {} 

[project]
name = "metricspace"
description = "A python translation of code originally theorized in: Metric-space analysis of spike trains: theory, algorithms, and application Jonathan D. Victor and Keith Purpura Network 8, 127-164 (1997)"
authors = [
    {name = "Flynn OConnell", email = "flynnoconnell@gmail.com"},
    {name = "Jonathan D Victor", email = "jdvicto@med.cornell.edu"}
]

dependencies = ["setuptools>=40.8.0", "wheel", "rs-distances", "numba", "numpy"]

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.license]
file = "LICENSE"


[project.urls]
homepage = "https://github.com/NeuroPyPy/metricspace"
repository = "https://github.com/NeuroPyPy/metricspace"
documentation = "http://www-users.med.cornell.edu/~jdvicto/metricdf.html#algorithm"

[tool.bumpver]
current_version = "0.7.0"
version_pattern = "{pycalver}"
commit = true
tag = true
push = false
