[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
version = "1.1.0"
name = "metricspace"
description = "A python translation of code originally theorized in: Metric-space analysis of spike trains: theory, algorithms, and application Jonathan D. Victor and Keith Purpura Network 8, 127-164 (1997)"
authors = [
    {name = "Flynn OConnell", email = "flynnoconnell@gmail.com"},
    {name = "Jonathan D Victor", email = "jdvicto@med.cornell.edu"}
]

dependencies = ["setuptools>=40.8.0", "wheel", "numba>=0.57.0", "numpy>=1.24.3"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.license]
file = "LICENSE"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[package]
version = "1.2.0"
edition = "2023"

[package.metadata.maturin]
rust-version = "1.56.0"
requires-dist = ["numpy"]

[package.metadata.maturin.dependencies]
ndarray = "0.15.4"
numpy = "0.14.1"
pyo3 = { version = "0.15.1", features = ["extension-module"] }


[project.urls]
homepage = "https://github.com/NeuroPyPy/metricspace"
repository = "https://github.com/NeuroPyPy/metricspace"
documentation = "http://www-users.med.cornell.edu/~jdvicto/metricdf.html#algorithm"
